# advent-of-code

./: .gitignore  Cargo.toml  Makefile  README.md  justfile  manager.py  pyproject.toml
2024/day01/: Cargo.toml
2024/day02/: Cargo.toml
2024/day03/: Cargo.toml
2024/day04/: Cargo.toml
2024/day05/: Cargo.toml
2024/day06/: Cargo.toml
2024/day07/: Cargo.toml
2024/day08/: Cargo.toml
2024/day09/: Cargo.toml
2024/day1/: Cargo.toml  README.md
2024/day10/: Cargo.toml  README.md
2024/day11/: Cargo.toml  README.md
2024/day12/: Cargo.toml  README.md
2024/day13/: Cargo.toml  README.md
2024/day14/: Cargo.toml  README.md
2024/day15/: Cargo.toml  README.md
2024/day2/: Cargo.toml  README.md
2024/day3/: Cargo.toml  README.md
2024/day4/: Cargo.toml  README.md
2024/day5/: Cargo.toml  README.md
2024/day6/: Cargo.toml  README.md
2024/day7/: Cargo.toml  README.md
2024/day8/: Cargo.toml  README.md
2024/day9/: Cargo.toml  README.md
manager/: main.py
src/: main.rs
src/year2024/day01/: part1.rs  part2.rs
src/year2024/day02/: part1.rs  part2.rs
src/year2024/day03/: part1.rs  part2.rs
src/year2024/day04/: part1.rs  part2.rs
src/year2024/day05/: part1.rs  part2.rs
src/year2024/day06/: part1.rs  part2.rs
src/year2024/day07/: part1.rs  part2.rs
src/year2024/day08/: part1.rs  part2.rs
src/year2024/day09/: part1.rs  part2.rs
src/year2024/day10/: part1.rs  part2.rs
src/year2024/day11/: part1.rs  part2.rs
src/year2024/day12/: part1.rs  part2.rs
src/year2024/day13/: part1.rs  part2.rs
src/year2024/day14/: part1.rs  part2.rs
src/year2024/day15/: part1.rs  part2.rs  part3.rs
src/year2025/day01/: part1.rs  part2.rs
src/year2025/day02/: part1.rs  part2.rs
src/year2025/day03/: part1.rs  part2.rs
src/year2025/day04/: part1.rs  part2.rs
src/year2025/day05/: part1.rs  part2.rs
src/year2025/day06/: part1.rs  part2.rs
template/: Cargo.toml  README.md
