[workspace]
resolver = "3"
members = ["2024/*"]

[workspace.package]
version = "0.2.0"
authors = ["Souvlaki42 <souvlaki420@gmail.com>"]
edition = "2024"
license = "Unlicense"
description = "My advent of code solutions"
repository = "https://github.com/Souvlaki42/advent-of-code"
readme = "README.md"
rust-version = "1.89.0"

[workspace.dependencies]
itertools = "0.14.0"
rayon = "1.10.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
regex = "1.11.1"
