[package]
name = "advent-of-code"
version = "0.4.0"
authors = ["Souvlaki42 <ilias@moulas.dev>"]
description = "My advent of code solutions"
readme = "README.md"
license = "Unlicense"
repository = "https://github.com/Souvlaki42/advent-of-code"
edition = "2024"
rust-version = "1.91"

[dependencies]
inventory = "0.3.21"
itertools = "0.14.0"
rayon = "1.11.0"
regex = "1.12.2"
