[package]
name = "day02"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "My solution for Advent of Code 2024/02"
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
itertools = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
regex = { workspace = true }
